--- a/assets/template/login/index.html
+++ b/assets/template/login/index.html
@@ -11,6 +11,21 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/login.css">
 </head>
+<!-- 
+* Copyright (c) 2024 Indra Saepudin
+*
+* Seluruh konten yang tersedia di website ini dilindungi oleh Hak Cipta Indra Saepudin 2024.
+*
+* Anda diberikan izin untuk menggunakan, menyalin, atau mendistribusikan konten ini untuk tujuan non-komersial,
+* asalkan Anda memberikan atribusi kepada Indra Saepudin dan tidak mengubah konten dengan cara apa pun.
+*
+* Penggunaan konten untuk tujuan komersial hanya diperbolehkan dengan izin tertulis dari Indra Saepudin.
+*
+* Setiap penggunaan konten dari website ini harus mematuhi semua ketentuan hukum yang berlaku dan tidak boleh
+* melanggar hak cipta atau hak-hak lain yang terkait.
+*
+* Untuk meminta izin penggunaan komersial atau informasi lebih lanjut, silakan hubungi kami di indrasaepudin212@gmail.com.
+*/ -->
 
 <body>
   <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
